--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,6 +5,7 @@
             "label": "C/C++: cpp.exe build active file",
             "command": "C:\\MinGW\\bin\\cpp.exe",
             "args": [
+                "-Wno-conversion",
                 "-fdiagnostics-color=always",
                 "-g",
                 "${file}",
